UPdate documentation and recover controller
